--- a/modules/global/src/com/company/sawarebpm/entity/directories/messages.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/directories/messages.properties
@@ -4,6 +4,7 @@ Bank.address = Address
 Bank.agent = Agent
 Bank.agentName = Agent name
 Bank.agentPhone = Agent phone
+Bank.closedLoans = Closed loans
 Document = Document
 Document.name = Name
 Source = Source
