--- a/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages.properties
@@ -6,9 +6,27 @@ Questionnaire.bailiffsDebt = Bailiff's debt
 Questionnaire.litigations = Litigations
 Questionnaire.property = Property
 Questionnaire.requsestedCredit = Requsested credit
+Questionnaire.currentLoan = Current loan
+Questionnaire.closedLoans = Closed loans
 RequestedCredit = Requested Credit
 RequestedCredit.creditValue = Credit value
 RequestedCredit.creditTerm = Credit term
 RequestedCredit.interestRate = Interest Rate
 RequestedCredit.pledge = Pledge
 RequestedCredit.questionnaire = Questionnaire
+CurrendLoan = Currend Loan
+CurrendLoan.organization = Organization
+CurrendLoan.typeOfCredit = Type of credit
+CurrendLoan.dateOfIssue = Date of issue
+CurrendLoan.lastPayment = Last payment (date)
+CurrendLoan.balanceOwed = Balance owed
+CurrendLoan.comment = Comment
+CurrendLoan.amountOfCredit = Amount of credit
+CurrendLoan.monthlyPayment = Monthly payment
+CurrendLoan.questionnaire = Questionnaire
+ClosedLoans.bank = Bank
+ClosedLoans = Closed Loans
+ClosedLoans.typeOfCredit = Type of credit
+ClosedLoans.closingDate = Closing date
+ClosedLoans.comment = Comment
+ClosedLoans.questionnaire = Questionnaire
