--- a/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages_ru.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages_ru.properties
@@ -11,3 +11,13 @@ RequestedCredit.creditValue = Размер кредита
 RequestedCredit.creditTerm = Срок кредита
 RequestedCredit.interestRate = Процентная ставка
 RequestedCredit.pledge = Залог / поручительство
+CurrendLoan = Текущие кредиты
+CurrendLoan.organization = Организация
+CurrendLoan.typeOfCredit = Тип кредита
+CurrendLoan.dateOfIssue = Дата оформления
+CurrendLoan.lastPayment = Дата последнего платежа
+CurrendLoan.balanceOwed = Остаток долга
+CurrendLoan.comment = Комментарий
+ClosedLoans.typeOfCredit = Тип кредита
+ClosedLoans.closingDate = Дата закрытия
+ClosedLoans.comment = Комментарий
