Закончены сущности справочников

--- a/modules/global/src/com/company/sawarebpm/entity/directories/messages.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/directories/messages.properties
@@ -19,3 +19,9 @@ BusinessStatus.serialNumber = Serial number
 SuitableBankStatus = Suitable Bank Status
 SuitableBankStatus.name = Name
 SuitableBankStatus.serialNumber = Serial number
+Service = Service
+Service.name = Name
+Service.defaultCost = Default cost
+ServiceStatus = Service Status
+ServiceStatus.name = Name
+ServiceStatus.serviceNumber = Service number
