--- a/modules/global/src/com/company/sawarebpm/entity/directories/messages_ru.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/directories/messages_ru.properties
@@ -19,3 +19,9 @@ BusinessStatus.serialNumber = Порядковый номер
 SuitableBankStatus = Статус подходящего банка
 SuitableBankStatus.name = Название
 SuitableBankStatus.serialNumber = Порядковый номер
+Service = Услуга
+Service.name = Название
+Service.defaultCost = Стоимость по умолчанию
+ServiceStatus = Статус услуги
+ServiceStatus.name = Название
+ServiceStatus.serviceNumber = Порядковый номер
