--- a/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages.properties
@@ -14,19 +14,38 @@ RequestedCredit.creditTerm = Credit term
 RequestedCredit.interestRate = Interest Rate
 RequestedCredit.pledge = Pledge
 RequestedCredit.questionnaire = Questionnaire
-CurrendLoan = Currend Loan
-CurrendLoan.organization = Organization
-CurrendLoan.typeOfCredit = Type of credit
-CurrendLoan.dateOfIssue = Date of issue
-CurrendLoan.lastPayment = Last payment (date)
-CurrendLoan.balanceOwed = Balance owed
-CurrendLoan.comment = Comment
-CurrendLoan.amountOfCredit = Amount of credit
-CurrendLoan.monthlyPayment = Monthly payment
-CurrendLoan.questionnaire = Questionnaire
 ClosedLoans.bank = Bank
 ClosedLoans = Closed Loans
 ClosedLoans.typeOfCredit = Type of credit
 ClosedLoans.closingDate = Closing date
 ClosedLoans.comment = Comment
 ClosedLoans.questionnaire = Questionnaire
+Quest_legal = Quest legal
+Quest_legal.nameOfCompany = Name of company
+Quest_legal.ogrn = Ogrn
+Quest_legal.inn = Inn
+Quest_legal.kpp = Kpp
+Quest_legal.termOfExistence = Term of existence
+Quest_legal.taxation = Taxation
+Quest_legal.receipts = Receipts (for 2 last year)
+Quest_legal.profitLoss = Profit loss
+Quest_legal.staff = Staff
+Quest_legal.mainActivity = Main activity
+Quest_legal.purposeOfLending = Purpose of lending
+Quest_legal.openSettlementAccounts = Open settlement accounts
+Quest_legal.legalAddress = Legal address
+CurrentLoan = Current Loan
+CurrentLoan.updateTs = Update ts
+CurrentLoan.updatedBy = Updated by
+CurrentLoan.createTs = Create ts
+CurrentLoan.createdBy = Created by
+CurrentLoan.version = Version
+CurrentLoan.organization = Organization
+CurrentLoan.typeOfCredit = Type of credit
+CurrentLoan.amountOfCredit = Amount of credit
+CurrentLoan.dateOfIssue = Date of issue
+CurrentLoan.lastPayment = Last payment (date)
+CurrentLoan.balanceOwed = Balance owed
+CurrentLoan.monthlyPayment = Monthly payment
+CurrentLoan.comment = Comment
+CurrentLoan.questionnaire = Questionnaire
