--- a/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages_ru.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages_ru.properties
@@ -11,13 +11,26 @@ RequestedCredit.creditValue = Размер кредита
 RequestedCredit.creditTerm = Срок кредита
 RequestedCredit.interestRate = Процентная ставка
 RequestedCredit.pledge = Залог / поручительство
-CurrendLoan = Текущие кредиты
-CurrendLoan.organization = Организация
-CurrendLoan.typeOfCredit = Тип кредита
-CurrendLoan.dateOfIssue = Дата оформления
-CurrendLoan.lastPayment = Дата последнего платежа
-CurrendLoan.balanceOwed = Остаток долга
-CurrendLoan.comment = Комментарий
 ClosedLoans.typeOfCredit = Тип кредита
 ClosedLoans.closingDate = Дата закрытия
 ClosedLoans.comment = Комментарий
+Quest_legal = Анкета Юридического лица
+Quest_legal.nameOfCompany = Название организации
+Quest_legal.ogrn = ОГРН
+Quest_legal.inn = ИНН
+Quest_legal.kpp = КПП
+Quest_legal.termOfExistence = Срок существования бизнеса
+Quest_legal.taxation = Система налогооблажения
+Quest_legal.receipts = Выручка (прошлый год, позапрошлый)
+Quest_legal.profitLoss = Прибыль ( -убыток)
+Quest_legal.staff = Штат сотрудников
+Quest_legal.mainActivity = Основной вид деятельности
+Quest_legal.purposeOfLending = Цель кредитования
+Quest_legal.openSettlementAccounts = Открытые расчетные счета
+CurrentLoan = Текущие кредиты
+CurrentLoan.organization = Организация
+CurrentLoan.typeOfCredit = Тип кредита
+CurrentLoan.dateOfIssue = Дата оформления
+CurrentLoan.lastPayment = Дата последнего платежа
+CurrentLoan.balanceOwed = Остаток долга
+CurrentLoan.comment = Комментарий
