--- a/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages.properties
@@ -49,3 +49,27 @@ CurrentLoan.balanceOwed = Balance owed
 CurrentLoan.monthlyPayment = Monthly payment
 CurrentLoan.comment = Comment
 CurrentLoan.questionnaire = Questionnaire
+Quest_Indiv = Quest  Indiv
+Quest_Indiv.criminalAndAdministrativeResponsibility = Criminal and administrative responsibility
+Quest_Indiv.sourcesOfIncome = Sources of income
+Quest_Indiv.underageChildrens = Inderage childrens
+SourcesOfIncome = Sources Of Income
+SourcesOfIncome.source = Source
+SourcesOfIncome.experience = Experience
+SourcesOfIncome.position = Position
+SourcesOfIncome.documentBase = Document base
+SourcesOfIncome.amountOfIncome = Amount of income
+SourcesOfIncome.amountOfIncome2ndfl = Amount of income2ndfl
+SourcesOfIncome.quest_Indiv = Quest  indiv
+SourcesOfIncome.quest_phys = Quest phys
+Quest_phys = Quest phys
+Quest_phys.fullName = Full name
+Quest_phys.dateOfBirth = Date of birth
+Quest_phys.registrationAddress = Registration address
+Quest_phys.factAdress = Fact adress
+Quest_phys.scndDocument = Scnd document
+Quest_phys.participationInCompanies = Participation in companies
+Quest_phys.registrationOfIndividual = Registration of individual
+Quest_phys.criminalAndAdministrativeResponsibility = Criminal and administrative responsibility
+Quest_phys.underageChildrens = Underage childrens
+Quest_phys.sourceOfIncome = Source of income
