--- a/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages_ru.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages_ru.properties
@@ -34,3 +34,22 @@ CurrentLoan.dateOfIssue = Дата оформления
 CurrentLoan.lastPayment = Дата последнего платежа
 CurrentLoan.balanceOwed = Остаток долга
 CurrentLoan.comment = Комментарий
+Quest_Indiv.criminalAndAdministrativeResponsibility = Привлечение к уголовной и административной ответственности
+Quest_Indiv.sourcesOfIncome = Источники дохода
+Quest_Indiv.underageChildrens = Кол-во детей до 18 лет
+SourcesOfIncome = Источники дохода
+SourcesOfIncome.source = Источник (наименование)
+SourcesOfIncome.experience = Стаж (срок)
+SourcesOfIncome.position = Должность
+SourcesOfIncome.documentBase = Документ основание
+SourcesOfIncome.amountOfIncome = Размер дохода
+Quest_phys.fullName = ФИО
+Quest_phys.dateOfBirth = Дата рождения
+Quest_phys.registrationAddress = Адрес регистрации (прописка)
+Quest_phys.factAdress = Фактический адрес
+Quest_phys.scndDocument = 2-й Документ: СНИЛС; ВУ; Загранпаспорт
+Quest_phys.participationInCompanies = Участие в юр лицах
+Quest_phys.registrationOfIndividual = Регистрация в качестве ИП
+Quest_phys.criminalAndAdministrativeResponsibility = Привлечение к уголовной ответственности
+Quest_phys.underageChildrens = Кол-во детей до 18 лет
+Quest_phys.sourceOfIncome = Источник дохода
