--- a/modules/global/src/com/company/sawarebpm/entity/client/messages.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/client/messages.properties
@@ -7,3 +7,4 @@ AdditionalContact = Additional Contact
 AdditionalContact.note = Note
 AdditionalContact.phone = Phone
 AdditionalContact.client = Client
+Contractor = Contractor
