--- a/modules/global/src/com/company/sawarebpm/entity/client/messages_ru.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/client/messages_ru.properties
@@ -4,3 +4,4 @@ Client.eMail = E-mail
 Client.additionalContact = Дополнительные контакты
 AdditionalContact = Дополнительный контакт
 AdditionalContact.note = Примечание
+Contractor = Контрагент
