--- a/modules/global/src/com/company/sawarebpm/entity/client/messages.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/client/messages.properties
@@ -1,10 +1,22 @@
 Client = Client
-Client.fio = FIO
 Client.eMail = E-mail
 Client.phoneNumber = Phone number
 Client.additionalContact = Additional contact
+Client.comment = Comment
+Client.name = Name
+Client.face = Face
 AdditionalContact = Additional Contact
 AdditionalContact.note = Note
 AdditionalContact.phone = Phone
 AdditionalContact.client = Client
-Contractor = Contractor
+ClientType.Individual = Individual
+ClientType.Company = Company
+ClientType.Individual_entrepreneur = Individual entrepreneur
+ContractorPhys = Contractor Phys
+ContractorPhys.dateBorn = Date born
+ContractorPhys.passport = Passport (Serial and number)
+ContractorPhys.issueBy = Issue by
+ContractorPhys.issuedWhen = Issued when
+ContractorPhys.devisionCode = Devision code
+ContractorPhys.snails = Snails
+ContractorPhys.address = Address
