--- a/modules/global/src/com/company/sawarebpm/entity/client/messages_ru.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/client/messages_ru.properties
@@ -1,7 +1,19 @@
 Client = Клиент
-Client.fio = ФИО
 Client.eMail = E-mail
 Client.additionalContact = Дополнительные контакты
+Client.comment = Комментарий
+Client.name = Имя
+Client.face = Тип клиента
 AdditionalContact = Дополнительный контакт
 AdditionalContact.note = Примечание
-Contractor = Контрагент
+ClientType.Individual = Физическое лицо
+ClientType.Company = Юридическое лицо
+ClientType.Individual_entrepreneur = ИП
+ContractorPhys = Контрагент
+ContractorPhys.dateBorn = Дата рождения
+ContractorPhys.passport = Паспорт (серия, номер)
+ContractorPhys.issueBy = Кем выдан
+ContractorPhys.issuedWhen = Дата выдачи
+ContractorPhys.devisionCode = Код подразделения
+ContractorPhys.snails = СНИЛС
+ContractorPhys.address = Адрес регистрации
