lastEnt для теста форков

--- a/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages.properties
@@ -73,3 +73,4 @@ Quest_phys.registrationOfIndividual = Registration of individual
 Quest_phys.criminalAndAdministrativeResponsibility = Criminal and administrative responsibility
 Quest_phys.underageChildrens = Underage childrens
 Quest_phys.sourceOfIncome = Source of income
+LastEnt = Last Ent
