--- a/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages.properties
@@ -8,6 +8,7 @@ Questionnaire.property = Property
 Questionnaire.requsestedCredit = Requsested credit
 Questionnaire.currentLoan = Current loan
 Questionnaire.closedLoans = Closed loans
+Questionnaire.name = Name
 RequestedCredit = Requested Credit
 RequestedCredit.creditValue = Credit value
 RequestedCredit.creditTerm = Credit term
