--- a/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages_ru.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages_ru.properties
@@ -6,6 +6,7 @@ Questionnaire.bailiffsDebt = Долг по ФССП
 Questionnaire.litigations = Судебные разбирательства
 Questionnaire.property = Имущество в собственности
 Questionnaire.requsestedCredit = Запрашиваемый кредит
+Questionnaire.name = Имя заявки
 RequestedCredit = Запрашиваемый кредит
 RequestedCredit.creditValue = Размер кредита
 RequestedCredit.creditTerm = Срок кредита
