--- a/modules/global/src/com/company/sawarebpm/entity/underwriting/messages.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/underwriting/messages.properties
@@ -7,3 +7,9 @@ Underwriting.updatedBy = Updated by
 Underwriting.createTs = Create ts
 Underwriting.createdBy = Created by
 Underwriting.version = Version
+Underwriting.clientChek = Client chek
+Underwriting.companyCheck = Company check
+Underwriting.chekFssp = Chek fssp
+Underwriting.criminalProsecution = Criminal prosecution
+Underwriting.socialNetworkChek = Social network chek
+Underwriting.affilated = Affilated
