--- a/modules/global/src/com/company/sawarebpm/entity/underwriting/messages_ru.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/underwriting/messages_ru.properties
@@ -2,3 +2,9 @@ Underwriting = Андеррайтинг
 Underwriting.securityChek = Проверка по СБ
 Underwriting.employerReview = Проверка Работодателя
 Underwriting.checkingSoBorrower = Проверка созаемщика
+Underwriting.clientChek = Проверка клиента
+Underwriting.companyCheck = Проверка фирмы
+Underwriting.chekFssp = Проверка по ФССП
+Underwriting.criminalProsecution = Проверка уголовной ответственности
+Underwriting.socialNetworkChek = Проверка по соц сетям
+Underwriting.affilated = Проверка аффеллированных фирм
