--- a/modules/global/src/com/company/sawarebpm/entity/client/messages.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/client/messages.properties
@@ -20,3 +20,9 @@ ContractorPhys.issuedWhen = Issued when
 ContractorPhys.devisionCode = Devision code
 ContractorPhys.snails = Snails
 ContractorPhys.address = Address
+Company.inn = INN
+Company.kpp = KPP
+Company.ogrn = OGRN
+Company.juridicalAddress = Juridical address
+Company.factAddress = Fact address
+Company = Company
