--- a/modules/global/src/com/company/sawarebpm/entity/client/messages_ru.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/client/messages_ru.properties
@@ -17,3 +17,8 @@ ContractorPhys.issuedWhen = Дата выдачи
 ContractorPhys.devisionCode = Код подразделения
 ContractorPhys.snails = СНИЛС
 ContractorPhys.address = Адрес регистрации
+Company.inn = ИНН
+Company.kpp = КПП
+Company.ogrn = ОГРН
+Company.juridicalAddress = Юридический адрес
+Company.factAddress = Фактический адрес
