вот сейчас точно дописал inderwriter'a

--- a/modules/global/src/com/company/sawarebpm/entity/underwriting/messages.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/underwriting/messages.properties
@@ -13,3 +13,8 @@ Underwriting.chekFssp = Chek fssp
 Underwriting.criminalProsecution = Criminal prosecution
 Underwriting.socialNetworkChek = Social network chek
 Underwriting.affilated = Affilated
+Underwriting.clientCheck = Client check
+Underwriting.checkFssp = Check fssp
+Underwriting.vesselInspection = Vessel inspection
+Underwriting.chekSocialNetworks = Chek social networks
+Underwriting.affiliated = Affiliated
