--- a/modules/global/src/com/company/sawarebpm/entity/underwriting/messages_ru.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/underwriting/messages_ru.properties
@@ -8,3 +8,8 @@ Underwriting.chekFssp = Проверка по ФССП
 Underwriting.criminalProsecution = Проверка уголовной ответственности
 Underwriting.socialNetworkChek = Проверка по соц сетям
 Underwriting.affilated = Проверка аффеллированных фирм
+Underwriting.clientCheck = Проверка клиента
+Underwriting.checkFssp = Проверка ФССП
+Underwriting.vesselInspection = Проверка по судам
+Underwriting.chekSocialNetworks = Проверка по соц сетям
+Underwriting.affiliated = Проверка аффиллированных фирм
