--- a/modules/global/src/com/company/sawarebpm/entity/contract/messages.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/contract/messages.properties
@@ -1,2 +1,12 @@
 Contract = Contract
-Contract.number = Number
+Contract.conclusionDate = Conclusion date
+Contract.compensation = Compensation
+Contract.services = Services
+ServiceLine.service = Service
+ServiceLine = Service Line
+ServiceLine.desiredAmount = Desired amount
+ServiceLine.percent = Percent
+ServiceLine.cost = Cost
+ServiceLine.serviceState = Service state
+ServiceLine.comment = Comment
+ServiceLine.contract = Contract
