--- a/modules/global/src/com/company/sawarebpm/entity/contract/messages_ru.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/contract/messages_ru.properties
@@ -1,2 +1,11 @@
 Contract = Договор
-Contract.number = Номер
+Contract.conclusionDate = Дата заключения
+Contract.compensation = Компенсация
+Contract.services = Услуги
+ServiceLine.service = Услуга
+ServiceLine = Позиция услуги
+ServiceLine.desiredAmount = Желаемая сумма
+ServiceLine.percent = Процент
+ServiceLine.cost = Стоимость
+ServiceLine.serviceState = Статус услуги
+ServiceLine.comment = Комментарий
