--- a/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages.properties
@@ -9,6 +9,7 @@ Questionnaire.requsestedCredit = Requsested credit
 Questionnaire.currentLoan = Current loan
 Questionnaire.closedLoans = Closed loans
 Questionnaire.name = Name
+Questionnaire.number = Number
 RequestedCredit = Requested Credit
 RequestedCredit.creditValue = Credit value
 RequestedCredit.creditTerm = Credit term
