--- a/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages_ru.properties
+++ b/modules/global/src/com/company/sawarebpm/entity/questionnaire/messages_ru.properties
@@ -7,6 +7,7 @@ Questionnaire.litigations = Судебные разбирательства
 Questionnaire.property = Имущество в собственности
 Questionnaire.requsestedCredit = Запрашиваемый кредит
 Questionnaire.name = Имя заявки
+Questionnaire.number = Номер
 RequestedCredit = Запрашиваемый кредит
 RequestedCredit.creditValue = Размер кредита
 RequestedCredit.creditTerm = Срок кредита
